[gd_scene load_steps=11 format=2]

[ext_resource path="res://fontlar/youngserif-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resimler/bildirim_kutusu.webp" type="Texture" id=2]
[ext_resource path="res://resimler/journey_arkaplan.webp" type="Texture" id=3]
[ext_resource path="res://sceneler/ScrollContainer.gd" type="Script" id=4]
[ext_resource path="res://sceneler/tali_sahneler/Bildirim.gd" type="Script" id=5]
[ext_resource path="res://resimler/buton_alt_tiklama.webp" type="Texture" id=6]
[ext_resource path="res://resimler/button_alt_ana.webp" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 2
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0.996078, 0.00784314, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Bildirim" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arkaplan" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Arkaplan"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 95.0
margin_right = -23.0
margin_bottom = -25.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DikeyKonteyner" type="VBoxContainer" parent="Arkaplan/ScrollContainer"]
margin_right = 724.0
margin_bottom = 1246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Arkaplan/ScrollContainer/DikeyKonteyner"]
margin_right = 724.0
margin_bottom = 50.0
custom_constants/separation = 40
alignment = 1

[node name="Clear" type="TextureButton" parent="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer"]
margin_left = 172.0
margin_right = 342.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer/Clear"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -15.0
margin_right = 43.5
margin_bottom = 15.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 1 )
text = "Clear"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Refresh" type="TextureButton" parent="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer"]
margin_left = 382.0
margin_right = 552.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="Label2" type="Label" parent="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer/Refresh"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -15.0
margin_right = 43.5
margin_bottom = 15.0
custom_colors/font_color = Color( 0.121569, 0.984314, 0.0235294, 1 )
custom_fonts/font = SubResource( 1 )
text = "Refresh"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BildirimKutusu" type="TextureButton" parent="Arkaplan/ScrollContainer/DikeyKonteyner"]
visible = false
margin_top = 40.0
margin_right = 724.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 230 )
texture_normal = ExtResource( 2 )
expand = true

[node name="IcDikeyKonteyner" type="VBoxContainer" parent="Arkaplan/ScrollContainer/DikeyKonteyner/BildirimKutusu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_top = 38.0
margin_right = -43.0
margin_bottom = -38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kutumetin" type="Label" parent="Arkaplan/ScrollContainer/DikeyKonteyner/BildirimKutusu/IcDikeyKonteyner"]
margin_right = 640.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Ortalayici" type="CenterContainer" parent="Arkaplan"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -384.0
margin_top = 33.0
margin_right = 384.0
margin_bottom = 82.0

[node name="Baslik" type="Label" parent="Arkaplan/Ortalayici"]
margin_left = 264.0
margin_right = 503.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "Revelations"
align = 1
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Arkaplan/ScrollContainer/DikeyKonteyner/HBoxContainer/Refresh" to="." method="_on_Refresh_pressed"]
